SERVER-48696 sigaction actions need to all be extern "C"